--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar" id="myNavbar" style="color:darkgreen;">
-    <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
+    <a class="w3-bar-item w3-button w3-hover-green w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
       <i class="fa fa-bars"></i>
     </a>
     <a href="#home" class="w3-bar-item w3-button w3-hover-green" style="color:darkgreen;">HOME</a>
@@ -27,9 +27,9 @@
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-    <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
-    <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">PORTFOLIO</a>
-    <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
+    <a href="#about" class="w3-bar-item w3-button w3-hover-green" onclick="toggleFunction()" style="color:darkgreen;">ABOUT</a>
+    <a href="#portfolio" class="w3-bar-item w3-button w3-hover-green" onclick="toggleFunction()" style="color:darkgreen;">PORTFOLIO</a>
+    <a href="#contact" class="w3-bar-item w3-button w3-hover-green" onclick="toggleFunction()" style="color:darkgreen;" >CONTACT</a>
   </div>
 </div>
 
