--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="/home/nandukmg/Documents/BhoomitraSena Website/home/css/style.css">
+<link rel="stylesheet" type="text/css" href="/home/css/style.css">
 
 <body>
 
@@ -50,7 +50,7 @@
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       
-      <img src="/home/nandukmg/Documents/BhoomitraSena Website/home/cet.jpg" class="w3-round w3-image w3-animate-opacity" alt="Photo of tree" width="500" height="333" style="padding-top: 25px">
+      <img src="/home/cet.jpg" class="w3-round w3-image w3-animate-opacity" alt="Photo of tree" width="500" height="333" style="padding-top: 25px">
     </div>
 
     <!-- Hide this text on small devices -->
