--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
 -->
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
-<script src="/home/nandukmg/Documents/BhoomitraSena Website/home/js/index.js"></script>
+<script src="/BhoomitraSena/home/js/index.js"></script>
 
 </body>
 </html>
