--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       
-      <img src="/home/cet.jpg" class="w3-round w3-image w3-animate-opacity" alt="Photo of tree" width="500" height="333" style="padding-top: 25px">
+      <img src="/BhoomitraSena/home/cet.jpg" class="w3-round w3-image w3-animate-opacity" alt="Photo of tree" width="500" height="333" style="padding-top: 25px">
     </div>
 
     <!-- Hide this text on small devices -->
